added more binds

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -60,9 +60,6 @@ bind "h" "+jumpthrow"
 // Bind
 bind "shift" "+speed; r_cleardecals"
 
-bind "4" "slot5"
-unbind "5"
-
 bind "mwheelup" "+jump"
 bind "mwheeldown" "+jump"
 
@@ -74,32 +71,29 @@ bind "alt" "noclip"
 bind "ralt" "exec bhop"
 bind "rctrl" "exec treino"
 
-bind "l" "toggle cl_crosshairsize 2 999"
+bind "l" "toggle cl_crosshairsize 3 999"
+bind "o" "toggle sensitivity 1.9 1000"
 
 bind "r" "use weapon_knife; use weapon_hegrenade"
-bind "f" "use weapon_knife; use weapon_flashbang"
-bind "z" "use weapon_knife; use weapon_smokegrenade"
+bind "z" "use weapon_knife; use weapon_flashbang"
+bind "4" "use weapon_knife; use weapon_smokegrenade"
 bind "c" "use weapon_knife; use weapon_incgrenade; use weapon_molotov"
-bind "x" "use weapon_knife; use weapon_decoy"
+bind "j" "use weapon_knife; use weapon_decoy"
 
-bind "kp_end" "buy ump45"
-bind "kp_downarrow" "buy m4a1"
-bind "kp_pgdn" "buy awp"
+bind "uparrow" "buy m4a1; buy ak47; buy vest; buy vesthelm; buy defuser;"
+bind "downarrow" "buy awp; buy vest; buy vesthelm; buy defuser;"
+bind "leftarrow" "buy mp9; buy mac10; buy vest; buy vesthelm; buy defuser;"
+bind "rightarrow" "buy deagle; buy revolver; buy vest; buy vesthelm; buy defuser;"
 
-bind "kp_leftarrow" "buy hegrenade"
-bind "kp_5" "buy incgrenade"
-bind "kp_rightarrow" "buy smokegrenade"
-bind "kp_home" "buy flashbang"
-bind "kp_uparrow" "buy vest"
-bind "kp_pgup" "buy vesthelm"
-bind "kp_slash" "buy fn57"
-bind "kp_multiply" "buy defuser"
+bind "kp_end" "buy flashbang"
+bind "kp_downarrow" "buy hegrenade"
+bind "kp_pgdn" "buy incgrenade"
+bind "kp_leftarrow" "buy smokegrenade"
 
 bind "home" "quit"
 bind "end" "disconnect"
 
 // Quality of life
-commentary_firstrun "0"
 cl_autohelp "0"
 cl_showhelp "0"
 gameinstructor_enable "0"
