--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -69,7 +69,7 @@ bind "v" "+voicerecord"
 
 bind "alt" "noclip"
 bind "ralt" "exec bhop"
-bind "rctrl" "exec treino"
+bind "rctrl" "exec practice"
 
 bind "l" "toggle cl_crosshairsize 3 999"
 bind "o" "toggle sensitivity 1.9 1000"
