--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -14,6 +14,7 @@ zoom_sensitivity_ratio_mouse "0.8189"
 
 // HUD
 cl_color "2"
+net_graph "1"
 
 // Audio
 volume "0.5"
@@ -30,7 +31,7 @@ snd_mute_mvp_music_live_players "1"
 snd_dzmusic_volume "0"
 
 // Viewmodel
-cl_righthand "1"
+cl_righthand "0"
 viewmodel_presetpos "3"
 
 cl_bobcycle "0.98"
@@ -48,7 +49,7 @@ cl_crosshairusealpha "1"
 cl_crosshairdot "0"
 cl_crosshaircolor "1"
 cl_crosshairgap "-3"
-cl_crosshairsize "2.5"
+cl_crosshairsize "2"
 cl_crosshairstyle "4"
 cl_crosshairthickness "1"
 
@@ -71,7 +72,7 @@ bind "alt" "noclip"
 bind "ralt" "exec bhop"
 bind "rctrl" "exec practice"
 
-bind "l" "toggle cl_crosshairsize 3 999"
+bind "l" "toggle cl_crosshairsize 2 999"
 bind "o" "toggle sensitivity 1.9 1000"
 
 bind "r" "use weapon_knife; use weapon_hegrenade"
